Fix size of color dialog on mobile

--- a/src/components/_gapminder/buttonlist/dialogs/_dialog.scss
+++ b/src/components/_gapminder/buttonlist/dialogs/_dialog.scss
@@ -12,7 +12,6 @@
   text-align: left;
   font-size: 0.9em;
   display: block;
-  top: -2000px; // issues: 369 & 442
   visibility: hidden;
   &.vzb-active {
     @include position(absolute, null null 45px 50%);
